--- a/CSS/CSS Grids and Flexbox for Responsive Web Design/flexbox/floats-conversion/css/styles.css
+++ b/CSS/CSS Grids and Flexbox for Responsive Web Design/flexbox/floats-conversion/css/styles.css
@@ -29,7 +29,7 @@ nav {
 }
 nav ul {
   list-style-type: none;
-  background-color: #e6bf98; 
+  background-color: #e6bf98;
   padding: .75em;
   margin: 12px 0 0 0;
   border-bottom: 3px solid #cc8850;
@@ -58,13 +58,6 @@ nav a:hover {
   color:#00c4c7;
 }
 
-
-.row:before, 
-.row:after {
-    content:"";
-    display: table;
-    clear:both;
-}
 div.row {
   background-color: #fff6e0;
   border-bottom-left-radius: 10px;
@@ -98,7 +91,7 @@ div.row {
   width: 100%;
   max-width: 250px;
   display: block; /* without this, there is a gap between the image and border -- space for descenders in text, for inline elements */
-} 
+}
 .sidebar-secondary {
   border-color: #c80060;
 }
@@ -109,7 +102,7 @@ blockquote {
   padding: 0em;
   margin: 0;
 }
-blockquote p, 
+blockquote p,
 blockquote cite {
   padding: 0 1em;
 }
@@ -136,44 +129,41 @@ footer a {
   text-decoration: none;
 }
 
-[class*=‘col’] {
-  margin-left: 0;
-}
-  .col-1,
-  .col-2,
-  .col-3,
-  .col-4,
-  .col-1-2,
-  .col-1-4  {
-  width: 96.66666%;
+.row {
+  display: flex;
+  flex-flow: row wrap;
+  flex: 0 1 auto;
 }
 
+[class*="col-"] {
+  flex: 0 0 92%;
+  margin: 0 4%;
+}
 
+.full-width {
+  flex: 0 0 100%;
+  margin: 0;
+}
+
+[class*="sidebar"] {
+  flex: 0 0 100%;
+  margin-bottom: 2em;
+  margin-right: 1em;
+}
+
+.row.col-1-4 {
+  margin-top: 3em;
+}
 
 /* Small devices (tablets, 768px and up) */
-@media (min-width: 550px) and (max-width: 849px) { 
+@media (min-width: 550px) {
   .wrapper {
       width: 97%;
       max-width: 767px;
-      float: none;
   }
- .col-1,
- .col-2,
- .col-1-2,
-.col-3,
-.col-4,
-.col-1-4 {
-  width: 96.66666%;
-}
-div.row {
-  padding: 0 2em;
-}
-aside[class*='sidebar'] {
-  float: left;
-  width: 47%;
-  margin-right: 3%;
-}
-
+  div.row {
+    padding: 0 2em;
+  }
   nav li,
   nav li:nth-child(even),
   nav li:nth-child(odd) {
@@ -185,34 +175,31 @@ aside[class*='sidebar'] {
   nav a {
       padding: 0em 1em 0em 1em;
   }
+  [class*="col-"] {
+    margin-left: 4%;
+    margin-right: 0%;
+  }
+
+  .col-2,
+  .col-1-2,
+  [class*="sidebar"] {
+    flex: 0 0 44%;
+  }
+
+  .col-3,
+  .col-4,
+  .col-1-4 {
+   flex: 0 0 92%;
+ }
 }
 /* Large devices (large desktops, 1200px and up) */
-@media (min-width: 850px) { 
+@media (min-width: 850px) {
   .wrapper {
       width: 97%;
       max-width: 1200px;
       float: none;
   }
 
-  [class*='col-'] {
-    float: left;
-    margin-left: 3.33333%;
-    min-height: 1px;
-  }
-  .col-1,
-  .col-1-2,
-  .col-1-4 {
-    width: 20.83333%;
-  }
-  .col-2 {
-    width: 44.99999%;
-  }
-  .col-3 {
-    width: 69.16665%;
-  }
-  .col-4 {
-    width: 96.66666%;
-  }
   h2 {
     font-size: 3em;
     border-bottom: 2px dotted #c80060;
@@ -233,5 +220,23 @@ aside[class*='sidebar'] {
   }
   nav a {
       padding: 0em 1em 0em 1em;
+  }
+
+  .col-1-2,
+  .col-1-4 {
+    flex: 0 0 20%;
+  }
+  .col-2
+  .col-2-4 {
+    flex: 0 0 44%;
+  }
+  .col-3 {
+    flex: 0 0 68%;
+  }
+  .col-4 {
+    flex: 0 0 92%;
+  }
+  [class*="sidebar"] {
+    flex: 0 0 100%;
   }
 }
